--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div id="jitsi-root"></div>
+    <div id="jitsi-root" style="position: relative;"></div>
     <script src='https://meet.jit.si/external_api.js'></script>
   </body>
 </html>
