Fix: Chatting align left to center

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div id="jitsi-root" style="position: relative;"></div>
+    <div style="width:100%; text-align: center;">
+      <div id="jitsi-root" style="position: relative; display: inline-block;"></div>
+    </div>
     <script src='https://meet.jit.si/external_api.js'></script>
   </body>
 </html>
